k8s/base/admin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: daily8-admin
  labels:
    app.kubernetes.io/name: daily8
    app.kubernetes.io/component: daily8-admin

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: daily8
      app.kubernetes.io/component: daily8-admin

  template:
    metadata:
      labels:
        app.kubernetes.io/name: daily8
        app.kubernetes.io/component: daily8-admin

    spec:
      serviceAccountName: daily8-admin-service-account

      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: daily8-admin
          image: daily8-admin-image
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 3004
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi

            limits:
              cpu: 300m
              memory: 256Mi

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
